--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.barnet.gov.uk/">London Borough of Barnet Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.richmond.gov.uk/">London Borough of Richmond upon Thames Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bromley.gov.uk">London Borough of Bromley Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.cravendc.gov.uk">Craven District Council</a></li>
-<li><a href="https://www.gov.ukhttp//findyourmp.parliament.uk/">Find your MP - UK Parliament</a></li>
-<li><a href="https://www.gov.ukhttp//www.cheltenham.gov.uk">Cheltenham Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.herefordshire.gov.uk">Herefordshire Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.nfdc.gov.uk">New Forest District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.mendip.gov.uk">Mendip District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.telford.gov.uk">Telford &amp; Wrekin Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.calderdale.gov.uk">Calderdale Metropolitan Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.bolton.gov.uk">Bolton Metropolitan Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.manchester.gov.uk">Manchester City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.havant.gov.uk">Havant Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.richmondshire.gov.uk">Richmondshire District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.burnley.gov.uk/">Burnley Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.southsomerset.gov.uk">South Somerset District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.adur-worthing.gov.uk/">Adur &amp; Worthing Councils</a></li>
+<li><a href="https://www.gov.ukhttp//www.castlereagh.gov.uk">Castlereagh Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.caerphilly.gov.uk">Caerphilly County Borough Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
