--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-the-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--3">Human Rights Council: 17th Session of the Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/queen-elizabeth-land-commemorative-coins-released">Queen Elizabeth Land Commemorative Coins released</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/240607.es-419">Los exámenes TOEFL o TEIC no se aceptarán para tramitar visas de estudio</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-provides-english-classes-to-costa-rican-police-officers--2">British Embassy provides English classes to Costa Rican Police Officers</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/297168.cs">Jaké reformě EU chce Británie napomoci?</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/286266.es">Día de San David 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/big-ideas-get-them-off-the-ground-in-the-uk--2">Big ideas? Get them off the ground in the UK</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/global-summit-to-end-sexual-violence-in-conflict--4">Global Summit to End Sexual Violence in Conflict</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/262681.pt">SP assina acordo com Reino Unido na área de ciência e tecnologia</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/210451.ar">تغييرات في طرق الدفع للتأشيرة الإلكترونية إلى بريطانيا</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/232492.ja">Educational Testing Service (ETS)　について</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-the-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--5">Human Rights Council: 17th Session of the Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/282770.es">Exhibición y cata de cervezas premium británicas</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192707.es-419">El Reino Unido presente en la Cumbre Aerospacial México 2013</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/consular-enquiries-for-europe">Consular enquiries for Europe</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/263029.pt">Banco Central e Reino Unido assinam acordo de cooperação</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/new-honorary-consul-appointed-in-the-bahamas">New honorary consul appointed in the Bahamas</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/277623.zh-tw">簽證中心聖誕節與新年假期閉館時間</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/telephone-lines-out-of-order-at-the-british-embassy-in-havana">Telephone connection restored at the British Embassy in Havana</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-5th-uk-china-architecture-forum-held-in-guangzhou-on-4-july--2">The 5th UK-China Architecture Forum held in Guangzhou on 4 July</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
