--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.bromley.gov.uk">London Borough of Bromley Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/social-care-and-support-guide/care-services-equipment-and-care-homes/care-homes/">Care homes - NHS</a></li>
-<li><a href="https://www.gov.ukhttp//www.caerphilly.gov.uk">Caerphilly County Borough Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/">Talking therapy - NHS</a></li>
 <li><a href="https://www.gov.ukhttp//www.selby.gov.uk">Selby District Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.flintshire.gov.uk">Flintshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.eden.gov.uk/">Eden District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.westsussex.gov.uk/">West Sussex County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.lewes-eastbourne.gov.uk">Eastbourne Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.eastcambs.gov.uk">East Cambridgeshire District Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/">Talking therapy - NHS</a></li>
 <li><a href="https://www.gov.ukhttp//www.telford.gov.uk">Telford &amp; Wrekin Council</a></li>
+<li><a href="https://www.gov.ukhttp//findyourmp.parliament.uk/">Find your MP - UK Parliament</a></li>
+<li><a href="https://www.gov.ukhttp//www.iwight.com">Isle of Wight Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.richmond.gov.uk/">London Borough of Richmond upon Thames Council</a></li>
+<li><a href="https://www.gov.ukhttps//nationalcareersservice.direct.gov.uk/advice/courses/">Courses and learning - National Careers Service</a></li>
+<li><a href="https://www.gov.ukhttp//www.highpeak.gov.uk">High Peak Borough Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
